# AgriculturalWebsite

./: README.md  pyproject.toml  requirements.txt
agricultural_website/: manage.py
agricultural_website/agricultural_website/: asgi.py  settings.py  urls.py  wsgi.py
agricultural_website/web/: admin.py  forms.py  models.py  urls.py  views.py
agricultural_website/web/migrations/: 0001_initial.py  0002_post_post_date.py  0003_alter_post_body.py  0004_post_header_image.py  0005_post_tag.py  0006_products_alter_post_tag.py  0007_products_pick_available.py  0008_rename_product_available_products_order_available_and_more.py
agricultural_website/web/static/css/: style.css
agricultural_website/web/templates/: about.html  base.html  blog_list.html  blog_post.html  contact.html  create_post.html  create_product.html  delete_post.html  delete_product.html  edit_post.html  edit_product.html  goods.html  index.html  product_list.html  products.html
